# questionRAG

./: .gitignore  create_cypher.ipynb  extract_e's_r's.ipynb  extract_labels_chunkwise.ipynb  extract_labels_rels.ipynb  labels_and_rels_2_q.json  merge_entities.ipynb  prompts.py  prune.ipynb  pyproject.toml  questions.ipynb  questions.json
