[project]
name = "questionrag"
version = "0.1.0"
description = ""
authors = [
    {name = "lucio-unique"}
]

requires-python = "~3.11"
dependencies = [
    "openai (>=1.65.2,<2.0.0)",
    "graphdatascience (>=1.14,<2.0)",
    "retry (>=0.9.2,<0.10.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "ipython (>=9.0.1,<10.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
